--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 
 .search-button{
   border: none;
-  background: lightskyblue ;
+  background: dodgerblue ;
   padding: 10px 20px;
   color: white;
 }
