--- a/src/recipe.module.css
+++ b/src/recipe.module.css
@@ -1,4 +1,4 @@
-.recipe {
+/* .recipe {
     border-radius: 10px;
     box-shadow: 0px 5px 20px lightslategrey;
     margin: 20px;
@@ -29,4 +29,4 @@
     width: 500px;
     justify-content: space-around;
     align-items: center;
-}
+} */
