--- a/src/App.css
+++ b/src/App.css
@@ -16,17 +16,17 @@
   width: 50%;
   border: none;
   padding: 10px;
-  margin-top: 20px;
-  border-radius: 0.3em;
+  margin-top: 25px;
+  border-radius: 0.2em;
 }
 
 .search-button{
   border: none;
-  background: dodgerblue ;
+  background: linear-gradient(to right, #00f2fe 0%, #4facfe 100%) ;
   padding: 10px 20px;
   color: white;
-  margin-top: 20px;
-  border-radius: 0.3em;
+  margin-top: 25px;
+  border-radius: 0.2em;
 }
 
 /* .recipes{
@@ -52,13 +52,13 @@
   justify-content: space-around;
   align-items: center;
   min-height: 10vh;
-  background-color: rgb(9, 117, 81);
+  background-color: #097551;
   color: white;
   box-shadow: 0px 5px 25px rgb(9, 117, 81);
 }
 
 .card-columns {
-  margin-top: 60px;
+  margin-top: 40px;
   margin-left: 20px;
   margin-right: 20px;
   padding-bottom: 30px;
