--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
   border: none;
   padding: 10px;
   margin-top: 25px;
+  margin-right: 2px;
   border-radius: 0.2em;
 }
 
@@ -66,4 +67,8 @@
 
 .card {
   margin-bottom: 30px;
+}
+
+a {
+  color: black;
 }
