--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
 
 .search-button{
   border: none;
-  background: linear-gradient(to right, #00f2fe 0%, #4facfe 100%) ;
+  background: linear-gradient(to right, #00f1fec5 0%, #4facfe 100%) ;
   padding: 10px 20px;
   color: white;
   margin-top: 25px;
