--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,8 @@
   font-size: 65px;
   padding-left: 35%;
   /* padding-right: 35%; */
+  /* white-space: nowrap;
+  overflow: hidden; */
 }
 
 .nav {
@@ -82,4 +84,24 @@ a {
 .lemmetrythis {
   padding-top: 30px;
   padding-bottom: 10px;
+}
+
+.additional-title {
+  padding-top: 40px;
+  padding-left: 22px;
+  color: whitesmoke;
+  font-size: 20pt;
+  text-shadow: 3px 3px 4px rgb(7, 85, 59);
+  font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+  font-weight: bolder;
+}
+
+#about-subtitle {
+  padding-top: 10px;
+  padding-left: 40px; 
+  color: whitesmoke;
+  font-size: 16pt;
+  text-shadow: 3px 3px 4px rgb(7, 85, 59);
+  font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+  font-weight: bolder;
 }
